# NotionKnowledgeAssistant

./: .1a78vcmg33jhz1408883936~  .1en421dezdzao3827739918~  .1tnw6iqqv4htp3604545185~  .1zjakfpv4dfjb2393626037~  .2ckwehzmq6btq2820602315~  .2plxamyltzuj73662997517~  .31f5ju9k1urk62156800485~  .31r6jdyi88ndh2455556043~  .3fiqaf19rrjq63039066144~  .3kexevoc28dsp2450582802~  .3md8waz9vltn9588567299~  .3t1sf21e7op7r3832520870~  .3t6brdcecbpp163558036~  .dohxpsylfood4041419109~  .gitignore  .kl9d9i7ll1fy1853318612~  .vij96e99ih9t3654227420~  README.md  dashboard.py  dataloader.py  document_chunks.py  document_embeddings.py  globalvariables.py  main.py  prompt_templates.py  pyproject.toml  retrievalqachain.py  test_data.py
Notion_db/: Product Bucket f5e50eb57b274fb5bf1d43a2af85b67b.md
Notion_db/Product Bucket f5e50eb57b274fb5bf1d43a2af85b67b/: 6 different product metrics you need to know 89f469d2a1a4460d8c92ceaa934f71bb.md  Buckets of activities PM do 3e00012a4e85449cb77c96f4fac2612b.md  Communication 0c69f32169c14647be24e73ae281909b.md  Courses 0f1379c43ea14d6fb9710b6f964e73a9.md  Customer Obsession d0e779c982e546b9b7b3a1f634f43c15.md  Developer Products 40e0dded90ea4e2bbf6fc6c08cde4b92.md  Feature Strategy Evaluation - TARS Framework f2571ba4a37f4cfc9337c2b80c0ce3dd.md  How to evaluate a PM 307250e5fe8f411c9cdf28fdd4ac665f.md  JTBD Research 87c9535575f34487aba39847bea179c8.md  Managing up 6f155f0d0c0c4ce1ba8d04be0e7724c7.md  Onboarding 4c135a9596074037afcf9f90c6d348f5.md  Podcast Learnings 209164b5d50e4d4d81f90bf7be235acb.md  (+14 more)
flagged/: log.csv
(+49 files in other folders)
